post and comment Schema
